# gsettings-desktop-schemas

./: .gitlab-ci.yml  AUTHORS  HACKING  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.ac  gsettings-desktop-schemas.doap  gsettings-desktop-schemas.pc.in  meson.build  meson_options.txt
build-aux/meson/: post-install.py  post-install.sh
docs/reference/: Makefile.am  gsettings-desktop-schemas-docs.xml  gsettings-desktop-schemas-sections.txt  gsettings-desktop-schemas.types
headers/: Makefile.am  dummy.c  gdesktop-enums.h  meson.build
po/: LINGUAS  POTFILES.in  POTFILES.skip  ab.po  as.po  be.po  bg.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  en_US.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  kab.po  kk.po  lo.po  lt.po  lv.po  meson.build  (+28 more)
schemas/: Makefile-schemas.include  Makefile.am  gsettings-desktop-schemas.convert  meson.build  org.gnome.desktop.a11y.applications.gschema.xml  org.gnome.desktop.a11y.applications.gschema.xml.in.in  org.gnome.desktop.a11y.gschema.xml.in.in  org.gnome.desktop.a11y.interface.gschema.xml.in  org.gnome.desktop.a11y.keyboard.gschema.xml  org.gnome.desktop.a11y.keyboard.gschema.xml.in  org.gnome.desktop.a11y.keyboard.gschema.xml.in.in  org.gnome.desktop.a11y.magnifier.gschema.xml.in  org.gnome.desktop.a11y.magnifier.gschema.xml.in.in  org.gnome.desktop.a11y.mouse.gschema.xml  org.gnome.desktop.a11y.mouse.gschema.xml.in  org.gnome.desktop.a11y.mouse.gschema.xml.in.in  org.gnome.desktop.app-folders.gschema.xml.in  org.gnome.desktop.app-folders.gschema.xml.in.in  org.gnome.desktop.background.gschema.xml.in  org.gnome.desktop.background.gschema.xml.in.in  org.gnome.desktop.background.lockdialog.gschema.xml.in  org.gnome.desktop.break-reminders.gschema.xml.in  org.gnome.desktop.calendar.gschema.xml.in  org.gnome.desktop.datetime.gschema.xml.in.in  org.gnome.desktop.default-applications.gschema.xml  org.gnome.desktop.default-applications.gschema.xml.in  org.gnome.desktop.default-applications.gschema.xml.in.in  org.gnome.desktop.input-sources.gschema.xml.in  org.gnome.desktop.input-sources.gschema.xml.in.in  org.gnome.desktop.interface.gschema.xml  org.gnome.desktop.interface.gschema.xml.in  org.gnome.desktop.interface.gschema.xml.in.in  org.gnome.desktop.lockdown.gschema.xml  org.gnome.desktop.lockdown.gschema.xml.in  org.gnome.desktop.lockdown.gschema.xml.in.in  org.gnome.desktop.media-handling.gschema.xml.in  org.gnome.desktop.media-handling.gschema.xml.in.in  org.gnome.desktop.notifications.gschema.xml.in  org.gnome.desktop.notifications.gschema.xml.in.in  org.gnome.desktop.peripherals.gschema.xml.in  (+33 more)
src/: Makefile.am  gdesktop-enums.h  gdesktop-type-builtins.c.template  gdesktop-type-builtins.h.template
win32/: Makefile.am  Makefile.msvc-introspection  Makefile.vc  README.txt  build-rules-msvc.mak  config-msvc.mak.in  create-lists-msvc.mak  detectenv-msvc.mak  generate-msvc.mak  genpc.py  genschema.py  gsettings-desktop-schemas-msvc.mak.in  replace.py  uri.py
